--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "GPL3",
   "main": "dist/index.js",
+  "wdserv": "selenium-standalone start",
   "typings": "dist/index.d.ts",
   "scripts": {
     "start": "node dist/index.js",
@@ -19,6 +20,9 @@
     "prepare": "npm run rm && tsc -p tsconfig.json"
   },
   "dependencies": {
+    "ns-common": "0.0.11",
+    "ns-trader": "0.0.10",
+    "ns-types": "0.0.19",
     "toml": "^2.3.3"
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.20",
     "@types/power-assert": "^1.4.29",
+    "@types/webdriverio": "^4.8.6",
     "config": "^1.26.1",
     "cross-env": "^5.1.0",
     "debug": "^3.1.0",
