--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "start:watch": "nodemon",
+    "debug": "node --inspect dist/index.js",
     "rm": "rimraf dist",
     "tsc": "npm run rm && tsc -p tsconfig.development.json",
     "tslint": "tslint --project ./tslint.json",
@@ -30,7 +31,6 @@
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.20",
     "@types/power-assert": "^1.4.29",
-    "@types/webdriverio": "^4.8.6",
     "config": "^1.26.1",
     "cross-env": "^5.1.0",
     "debug": "^3.1.0",
