--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ns-trading-server",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "node-stock trading-server app",
   "repository": {
     "type": "git",
@@ -22,34 +22,35 @@
   },
   "dependencies": {
     "node-bitbankcc": "^1.0.1",
-    "ns-common": "0.0.11",
+    "ns-common": "0.0.12",
+    "ns-manager": "0.0.44",
     "ns-trader": "0.0.10",
-    "ns-types": "0.0.26",
+    "ns-types": "0.0.30",
     "toml": "^2.3.3"
   },
   "devDependencies": {
+    "@nestjs/common": "^4.5.1",
+    "@nestjs/core": "^4.5.1",
+    "@nestjs/microservices": "^4.5.1",
+    "@nestjs/testing": "^4.5.1",
+    "@nestjs/websockets": "^4.5.1",
     "@types/config": "0.0.33",
     "@types/mocha": "^2.2.41",
-    "@types/node": "^8.0.20",
+    "@types/node": "^8.5.1",
     "@types/power-assert": "^1.4.29",
     "config": "^1.26.1",
     "cross-env": "^5.1.0",
     "debug": "^3.1.0",
     "intelli-espower-loader": "^1.0.1",
-    "mocha": "^3.5.0",
-    "nodemon": "^1.12.1",
+    "mocha": "^4.0.1",
     "mysql2": "^1.4.2",
+    "nodemon": "^1.13.3",
     "power-assert": "^1.4.4",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.6.0",
-    "typescript": "^2.6.1",
-    "@nestjs/core": "^4.4.2",
-    "@nestjs/common": "^4.4.2",
-    "@nestjs/microservices": "^4.4.1",
-    "@nestjs/websockets": "^4.4.1",
-    "@nestjs/testing": "^4.4.1",
     "reflect-metadata": "^0.1.10",
     "rimraf": "^2.6.2",
-    "rxjs": "^5.5.2"
+    "rxjs": "^5.5.2",
+    "ts-node": "^4.0.2",
+    "tslint": "^5.6.0",
+    "typescript": "^2.6.1"
   }
 }
