--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "rm": "rimraf dist",
     "tsc": "npm run rm && tsc -p tsconfig.development.json",
     "tslint": "tslint --project ./tslint.json",
-    "test": "cross-env NODE_ENV=test mocha dist/**/*.test.js --timeout 3000 --require intelli-espower-loader",
+    "test": "cross-env NODE_ENV=test mocha dist/**/*.test.js --timeout 5000 --require intelli-espower-loader",
     "prepare": "npm run rm && tsc -p tsconfig.json"
   },
   "dependencies": {
+    "bignumber.js": "^5.0.0",
+    "bitbank-handler": "0.0.1-beta.2",
     "node-bitbankcc": "^1.0.1",
-    "ns-common": "0.0.12",
-    "ns-manager": "0.0.44",
-    "ns-trader": "0.0.10",
-    "ns-types": "0.0.30",
+    "ns-common": "0.0.15",
+    "ns-manager": "0.0.47",
+    "ns-trader": "0.0.11",
+    "ns-types": "0.0.40",
     "toml": "^2.3.3"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@nestjs/microservices": "^4.5.1",
     "@nestjs/testing": "^4.5.1",
     "@nestjs/websockets": "^4.5.1",
+    "@types/bignumber.js": "^4.0.3",
     "@types/config": "0.0.33",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.5.1",
