--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ns-trading-server",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "node-stock trading-server app",
   "repository": {
     "type": "git",
@@ -23,10 +23,11 @@
   "dependencies": {
     "bignumber.js": "^5.0.0",
     "bitbank-handler": "0.0.1-beta.2",
-    "ns-common": "0.0.15",
-    "ns-manager": "0.0.47",
-    "ns-trader": "0.0.11",
-    "ns-types": "0.0.40",
+    "ns-common": "0.0.16",
+    "ns-manager": "0.0.57",
+    "ns-store": "0.0.48",
+    "ns-trader": "0.0.12",
+    "ns-types": "0.0.53",
     "toml": "^2.3.3"
   },
   "devDependencies": {
@@ -35,7 +36,7 @@
     "@nestjs/microservices": "^4.5.1",
     "@nestjs/testing": "^4.5.1",
     "@nestjs/websockets": "^4.5.1",
-    "@types/bignumber.js": "^4.0.3",
+    "@types/bignumber.js": "^5.0.0",
     "@types/config": "0.0.33",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.5.1",
